--- a/cucumberhater.html
+++ b/cucumberhater.html
@@ -44,9 +44,9 @@ a:visited {
   <p>
     </p>
   <img id="photo"
-  src="cucumber.jpeg"/>
+  src="cucumberx.gif"/>
   <img id="photo"
-  src="cucumber.jpeg"/>
+  src="cucumberx.gif"/>
       <p>1. A world where you don't have to say 'extract cucumbers' when ordering cold noodles</p>
       <p>2. A world where you can buy a convenience store sandwich without worrying about cucumbers</p>
       <p>3. A world where you don't have to take out cucumber with chopstick</p>
